# ceti-stream

./: Cargo.toml  README.md  cargo.toml
.cargo/: config
MATLAB_example/: audio_client.m  ecg_client.m
examples/client/: main.rs
python-client/: ceti-stream-client.py  ceti-stream-client_audio-example.py  ceti-stream.py
src/client/: main.rs
src/daemon/: audio.rs  ceti.rs  ecg.rs  fwd_thread.rs  main.rs  subscription.rs
src/hello/: main.rs
