[package]
name = "ceti-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.158"

[dev-dependencies]
rodio = "0.20.1"

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[[example]]
name = "client"

[[bin]]
name = "hello"
path = "src/hello/main.rs"
